# major-server

./: Dockerfile  Makefile  README.md  compose.yml  dune-project  major.opam
lib/: api.ml  api.mli  app.ml  app.mli  app_utils.ml  auth_service.ml  auth_service.mli  database_service.ml  database_service.mli  domain.ml  dune  judgment.ml  services.ml  services.mli  utils.ml
openapi/: openapi.html  openapi.yml  template.html
test/: dune  get_token.hurl  memory_auth.ml  memory_database.ml  test.ml
